--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
 [project]
 name = "irreversible-variational-solvers"
-authors = [
-    {name = "Andrés A León Baldelli", email = "leon.baldelli@cnrs.fr"},
-    ]
+authors = [{ name = "Andrés A León Baldelli", email = "leon.baldelli@cnrs.fr" }]
 version = "0.1.0"
 requires-python = ">=3.8"
 
@@ -13,7 +11,7 @@ description = "Three solvers for irreversible evolutionary processes with a gene
 readme = "README.md"
 
 # Path to license file
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 
 # Direct dependencies
 dependencies = [
@@ -25,6 +23,7 @@ dependencies = [
     "PyYAML>=6.0.1",
     "scipy>=1.12.0",
     "pyvista>=0.43",
+    "fenics-dolfinx==0.7.*",
 ]
 
 [project.optional-dependencies]
